--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -40,4 +40,9 @@ body {
   font-weight: normal;
 }
 
-/*end home page styles*/
+.react-datepicker-wrapper
+ {
+  width: 100%;
+ }
+ 
+ /*end home page styles*/
